# Cprimes

./: .gitignore  CMakeLists.txt  README.md  build.py  cprimes-tests.py  cprimes.py  doxygen.config  makefile  primes.h  tests.py
benchmarks/: CMakeLists.txt
benchmarks/c/: eratos.cpp
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  cprimes.py
c-tests/: makefile
c-tests/src/: AllTests.c  CuTest.h  test_eratos.c  test_miller_rabin.c
cprimeslib/: CMakeLists.txt
cprimeslib/include/: cprimes_platform.h  defines-windows.h  defines.h  eratos.h  estimate.h  lucas_lehmer.h  miller_rabin.h  seg_eratos.h  windows-defines.h
cprimeslib/source/: eratos.c  estimate.c  lucas_lehmer.c  miller_rabin.c  seg_eratos.c  util.h
gmp/: CMakeLists.txt  gen_vcpkg_export_mpir.cmd
inc/: atkin.h  benchmark.h  defines.h  eratos.h  eratos_seg.h  estimate.h  lucas_lehmer.h  miller_rabin.h  millerrabin.h  seg_eratos.h  uint128.h
pyprimes/: __init__.py  c.py  factoring.py  primality.py  test.py
src/: atkin.c  benchmark.c  eratos.c  eratos.h  eratos_seg.c  estimate.c  lucas_lehmer.c  miller_rabin.c  millerrabin.c  prime.c  py_below.c  seg_eratos.c  test.c  tests.c  uint128.c
tests/: CMakeLists.txt  run-all-tests  run-all-tests.bat
tests/c/: AllTests.c  CMakeLists.txt  CuTest.c  CuTest.h  all_tests.c  makefile  test_eratos.c  test_estimate.c  test_lucas_lehmer.c  test_miller_rabin.c
tests/c/src/: AllTests.c  CuTest.c  test_eratos.c  test_miller_rabin.c
tests/python/: CMakeLists.txt  tests-python.py
